--- a/快速集成.md
+++ b/快速集成.md
@@ -14,8 +14,8 @@ arcgis-android-api.jar
 /armeabi-v7a
 /x86
 jackson-all-1.9.0.jar
-TYMapSDK-2.2.8.jar
-TYBLELocationEngine-2.0.6.jar
+TYMapSDK-2.x.x.jar
+TYBLELocationEngine-2.x.x.jar
 TYMapData.jar
 ```
 单独接入定位只需：TYBLELocationEngine.jar、libTYLocationEngine.so、libsqlite3.so和TYMapData.jar
@@ -45,15 +45,14 @@ android {
 ## 4、项目配置权限和服务，若targetSdkVersion>=23,需代码调用获取定位、文件读写权限代码
 
 ```
-    <!-- 更新数据 -->
+    <!-- 定位、地图更新数据 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- 定位扫描beacon用 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
-
-    <!-- 拷贝数据到sd卡用，targetSdkVersion>=23需手动申请 -->
+    <!-- 拷贝定位、地图数据用，targetSdkVersion>=23需手动申请 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- Android6.0 后蓝牙扫描需要微定位权限，targetSdkVersion>=23需手动申请 -->
